Made changes to readme. Made example code more obvious

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "blog-mockup",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "example.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "node example.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
